# StickmanPhysics

./: .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: EventBus.h.F9C1D759C555E50A.idx  Events.h.01F81E92CDD509EC.idx  SharedData.h.4A246DB7CE297BE5.idx  input.cpp.4F5B7DF8B1EEC6BE.idx  input.h.836413445981C07F.idx  main.cpp.28C6B5B9A19A8825.idx  old_main.cpp.97CA735FC6CFF235.idx  physics.cpp.00A9F7D66885AFC4.idx  physics.h.C0E1764381A1DE17.idx  render.cpp.1432C289BBE876DD.idx  render.h.CBE71FE7C270AB6C.idx
.github/: copilot-instructions.md
.results/: 1-determine-techstack.md  2-categorize-files.md  3-identify-architecture.md  4-domain-deep-dive.md  5-styleguide-generation.md  6-build-instructions.md
include/: EventBus.h  Events.h  SharedData.h  input.h  physics.h  render.h  stickman.h
src/: data.json  data.json.old  input.cpp  main.cpp  physics.cpp  render.cpp  stickman.cpp
